# mcp-gdscript

./: .gitignore  CLAUDE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml
examples/: game_manager.gd  player.gd
src/mcp_gdscript/: __init__.py  parser.py  server.py  tools.py
tests/: test_parser.py  test_tools.py
tests/fixtures/: sample_enemy.gd  sample_manager.gd  sample_player.gd
